Sutter Health/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>SHP_Secure_Phone_extension__c</fullName>
        <description>This field is created to capture the Practitioner General Phone extension as a part of OLTP Req-3356</description>
        <label>Secure Phone extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Sent_License_Expiration_Date__c</fullName>
        <label>Sent License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHP_Supplier_Mailing_Address__c</fullName>
        <description>Req for OLTP Provieder</description>
        <formula>Supplier_Correspondence_Address__c + &apos; &apos; + Provider_Correspondence_City__c + &apos; &apos; +  Provider_Correspondence_State__c + &apos; &apos; + Provider_Correspondence_PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Corres.Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Survey_Sent_Date__c</fullName>
        <label>Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHP_Turn_off_Surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turn off Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceTabLabel__c</fullName>
        <description>This field is used to display the tab name is the service cloud console from the search results.</description>
        <formula>if(CONTAINS(FirstName,&quot;&apos;&quot;), SUBSTITUTE(FirstName, &quot;&apos;&quot;, &quot;&quot;), FirstName) &amp; &quot; &quot; &amp; if(CONTAINS(LastName,&quot;&apos;&quot;), SUBSTITUTE(LastName, &quot;&apos;&quot;, &quot;&quot;), LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServiceTabLabel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Differential__c</fullName>
        <label>Shift Differential</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_of_E_mail__c</fullName>
        <label>Source of E-mail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Affiliations_1__c</fullName>
        <label>Provider Affiliations 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Affiliations_2__c</fullName>
        <label>Provider Affiliations 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Affiliations_3__c</fullName>
        <label>Provider Affiliations 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Affiliations__c</fullName>
        <formula>Supplier_Affiliations_1__c &amp; &apos; &apos; &amp;  Supplier_Affiliations_2__c &amp; &apos; &apos; &amp; Supplier_Affiliations_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Affiliations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Classifications__c</fullName>
        <label>Provider Classifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Clearinghouse__c</fullName>
        <label>Provider Clearinghouse</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Credential_Suffix__c</fullName>
        <label>Provider Contact Credential Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_First_Name__c</fullName>
        <label>Provider Contact First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Last_Name__c</fullName>
        <label>Provider Contact Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Person__c</fullName>
        <label>Provider Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Suffix__c</fullName>
        <label>Provider Contact Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contract_Network__c</fullName>
        <label>Provider Contract Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contract_Type__c</fullName>
        <label>Provider Contract Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COMM</fullName>
                </value>
                <value>
                    <fullName>MCAL</fullName>
                </value>
                <value>
                    <fullName>MEDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Correspondence_Address__c</fullName>
        <label>Provider Correspondence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Correspondence_Fax__c</fullName>
        <label>Provider Correspondence Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Supplier_ER_Capability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider ER Capability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Email_ContactPerson__c</fullName>
        <label>Provider Contact Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supplier_Email_General__c</fullName>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supplier_In_Network_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider In-network Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_LOB_1__c</fullName>
        <label>Provider LOB 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_LOB_2__c</fullName>
        <label>Provider LOB 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_LOB_3__c</fullName>
        <label>Provider LOB 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_LOBs__c</fullName>
        <formula>Supplier_LOB_1__c &amp; &apos; &apos; &amp; Supplier_LOB_2__c &amp; &apos; &apos; &amp; Supplier_LOB_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider LOBs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_License_Issue_State__c</fullName>
        <label>Provider License State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_License_Number__c</fullName>
        <label>Provider License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Medicaid_ID__c</fullName>
        <label>Provider Medicaid ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Medicare_ID__c</fullName>
        <label>Provider Medicare ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_NPI__c</fullName>
        <label>Provider NPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Other_Name__c</fullName>
        <label>Provider Other Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Phone_ContactPerson__c</fullName>
        <label>Provider Contact Person Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Supplier_Phone_Remittance__c</fullName>
        <label>Provider Remittance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Supplier_Remittance_Address__c</fullName>
        <label>Provider Remittance Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_SHIS_Enterprise_ID__c</fullName>
        <label>Provider SHIS Enterprise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_SPS_Epic_ID__c</fullName>
        <label>Provider Epic ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Status_Date__c</fullName>
        <label>Provider Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Status__c</fullName>
        <label>Provider Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Submitter_ID__c</fullName>
        <label>Provider Submitter ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_TIN_Address__c</fullName>
        <label>Provider TIN Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Tax_ID__c</fullName>
        <label>Provider Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Contact TIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Admin_Associated_Providers__c</fullName>
        <label>Tech_Admin_Associated_Providers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TeleForm_Email__c</fullName>
        <label>TeleForm Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teleform_Last_Validation_Date__c</fullName>
        <label>Teleform Last Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Teleform_Provider_Validation_Date_Diff__c</fullName>
        <formula>if(NOT(ISBLANK(Teleform_Last_Validation_Date__c)) &amp;&amp; ISBLANK(Provider_Portal_Last_Validation_Date__c) || (NOT(ISBLANK(Teleform_Last_Validation_Date__c)) &amp;&amp; (Teleform_Last_Validation_Date__c &gt; Provider_Portal_Last_Validation_Date__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teleform Provider Validation Date Diff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Broker Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Broker Rep</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>Staff Contact</fullName>
                </value>
                <value>
                    <fullName>Other Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unarchived_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unarchived Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Unarchived_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserProv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UserProv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>PCRM Field -  Contains provider userame</description>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Reason_Code__c</fullName>
        <label>VIP Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <label>Vendor ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_TaxID__c</fullName>
        <label>Vendor Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <label>Verified By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_On__c</fullName>
        <label>Verified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isACCTAuthorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the Portal FLOW</description>
        <label>isACCTAuthorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCVAuthorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in the Portal FLOW.</description>
        <label>isCVAuthorized</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_SHP_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>PARENT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHP_Sales_Broker_Contact,Contact.SHP_Sales_Employer_Contact</value>
        </filters>
        <label>All SHP Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Broker_Reps</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHP_Sales_Broker_Contact</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHP_Sales_Broker_Contact_Read_Only</value>
        </filters>
        <label>SHP Broker Reps</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Sutter_Health_Plan_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Employee_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Employee</value>
        </filters>
        <label>Employee Contacts</label>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Employer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHP_Sales_Employer_Contact,Contact.SHP_Sales_Employer_Contact_Read_Only</value>
        </filters>
        <label>SHP Employer Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Sutter_Health_Plan_Executives</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Agents</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHP_Sales_Broker_Contact</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHP_Sales_Broker_Contact_Read_Only</value>
        </filters>
        <label>General Agents</label>
    </listViews>
    <listViews>
        <fullName>Member_Contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Member_HCC_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Member_Dependent_Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Member_Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Member</value>
        </filters>
        <label>SHP Member Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Employment_Status__c</field>
            <operation>startsWith</operation>
            <value>t</value>
        </filters>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PDI_Admin_Assistant_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Provider_Admin_Assistant</value>
        </filters>
        <label>PDI Admin Assistant Contacts</label>
    </listViews>
    <listViews>
        <fullName>Provider_Contacts</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Member_HCC_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Provider_NPI__c</columns>
        <columns>Supplier_NPI__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Supplier</value>
        </filters>
        <filters>
            <field>Provider_NPI__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Supplier_NPI__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Provider Contact</label>
    </listViews>
    <listViews>
        <fullName>SHMMN_Broker_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHMMN_Marketing_Broker</value>
        </filters>
        <label>SHMMN Broker Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHMMN_Employer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>PARENT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHMMN_Marketing_Employer</value>
        </filters>
        <label>SHMMN Employer Contacts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Search_for_Employee_by_Name</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Employee_Work_Email__c</columns>
        <columns>Employee_Affiliate_Facility__c</columns>
        <columns>Employee_Employment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_NAME</field>
            <operation>contains</operation>
            <value>Leon</value>
        </filters>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Uriel</value>
        </filters>
        <label>Search for Employee by last name</label>
    </listViews>
    <listViews>
        <fullName>Staff_Contacts</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHP_Sales_Broker_Contact</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SHP_Sales_Broker_Contact_Read_Only</value>
        </filters>
        <label>Staff Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Broker_Contact</fullName>
        <active>false</active>
        <description>Used for broker contact contact records.</description>
        <label>Broker Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <description>Used for employee contact records.</description>
        <label>Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member</fullName>
        <active>true</active>
        <description>Used for member contact records.</description>
        <label>Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nav_Member</fullName>
        <active>true</active>
        <label>Nav Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>true</active>
        <description>Used for provider contact records.</description>
        <label>Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider_Admin_Assistant</fullName>
        <active>true</active>
        <label>Provider Admin Assistant</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHMMN_Marketing_Broker</fullName>
        <active>true</active>
        <description>Used for SHMMN Broker Contacts.</description>
        <label>SHMMN Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHMMN_Marketing_Employer</fullName>
        <active>true</active>
        <description>Used for SHMMN Employer Contacts.</description>
        <label>SHMMN Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Broker_Contact</fullName>
        <active>true</active>
        <label>SHP Sales Broker Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Broker_Contact_Read_Only</fullName>
        <active>true</active>
        <label>SHP Sales Broker Contact Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Contact</fullName>
        <active>false</active>
        <label>SHP Sales Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Contact_Read_Only</fullName>
        <active>false</active>
        <label>SHP Sales Contact Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Employer_Contact</fullName>
        <active>true</active>
        <label>SHP Sales Employer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Employer_Contact_Read_Only</fullName>
        <active>true</active>
        <label>SHP Sales Employer Contact Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <description>Used for SHP Provider (Supplier) contact records.</description>
        <label>SHP Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Used for vendor contact records.</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contact_Name_ReadOnly_on_ReadOnly_RecTyp</fullName>
        <active>true</active>
        <description>Will prevent users from modifying the standard Contact Name field on the Read Only record types. Will throw an error on SAVE.</description>
        <errorConditionFormula>AND(
OR(
ISCHANGED( FirstName ),
ISCHANGED( LastName ),
ISCHANGED(Salutation)),
NOT(ISNEW()),
OR(
RecordType.Name = &quot;SHP Sales Broker Contact Read Only&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact Read Only&quot;),
$Profile.Name != &quot;Integration&quot;
)</errorConditionFormula>
        <errorMessage>Contact Name can only be modified in HealthRules</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_TIN_Type_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(ISBLANK( Tax_ID__c )),
OR(AND( 
NOT(ISPICKVAL(Broker_ID_Type__c, &apos;EIN&apos;)), 
NOT(ISPICKVAL(Broker_ID_Type__c, &apos;Tax-ID&apos;)),
RecordType.Name = &apos;SHP Sales Broker Contact&apos;
)))</errorConditionFormula>
        <errorDisplayField>Broker_ID_Type__c</errorDisplayField>
        <errorMessage>Contact TIN Type Required when Contact TIN is entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Donot_select_General_Agent_for_Broker</fullName>
        <active>true</active>
        <description>Don&apos;t select &quot;General Agent&quot; for &quot;Broker&quot; Type of Account</description>
        <errorConditionFormula>AND(TEXT(Account.Type)==&apos;Broker&apos;, TEXT(Type__c) ==&apos;General Agent&apos;)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Broker Contact Type Can&apos;t be General Agent for Account of Type  &apos;Broker&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_License_Exp_Date_if_License_No</fullName>
        <active>true</active>
        <description>Require a License Expiration Date if the License # field is populated</description>
        <errorConditionFormula>NOT(ISBLANK( License_Number__c))
&amp;&amp; 
ISBLANK( License_Expiration_Date__c )</errorConditionFormula>
        <errorDisplayField>License_Expiration_Date__c</errorDisplayField>
        <errorMessage>A License Expiration Date is required when the License # field is populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ten_Digit_Fax</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.Name = &quot;SHP Sales Broker Contact&quot;,
RecordType.Name = &quot;SHP Sales Broker Contact Read Only&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact Read Only&quot;,
RecordType.Name = &quot;SHMMN Broker&quot;,
RecordType.Name = &quot;SHMMN Employer&quot;), 
NOT(ISBLANK(  Fax )) , 
NOT(REGEX( Fax , &quot;\\D*?(\\d\\D*?){10,12}&quot;)),
$Profile.Name != &quot;Integration&quot;
)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax Must be between 10 to 12 digits only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ten_Digit_Home_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.Name = &quot;SHP Sales Broker Contact&quot;,
RecordType.Name = &quot;SHP Sales Broker Contact Read Only&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact Read Only&quot;,
RecordType.Name = &quot;SHMMN Employer&quot;,
RecordType.Name = &quot;SHMMN Broker&quot;), 
NOT(ISBLANK(   HomePhone )) , 
NOT(REGEX(  HomePhone , &quot;\\D*?(\\d\\D*?){10,12}&quot;)),
$Profile.Name != &quot;Integration&quot;
)</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>Home Phone Must be between 10 to 12 digits only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ten_Digit_Mobile</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.Name = &quot;SHP Sales Broker Contact&quot;,
RecordType.Name = &quot;SHP Sales Broker Contact Read Only&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact Read Only&quot;,
RecordType.Name = &quot;SHMMN Employer&quot;,
RecordType.Name = &quot;SHMMN Broker&quot;), 
NOT(ISBLANK(   MobilePhone )) , 
NOT(REGEX(  MobilePhone , &quot;\\D*?(\\d\\D*?){10,12}&quot;)),
$Profile.Name != &quot;Integration&quot;
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile  Must be between 10 to 12 digits only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ten_Digit_Other_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.Name = &quot;SHP Sales Broker Contact&quot;,
RecordType.Name = &quot;SHP Sales Broker Contact Read Only&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact Read Only&quot;,
RecordType.Name = &quot;SHMMN Broker&quot;,
RecordType.Name = &quot;SHMMN Employer&quot;), 
NOT(ISBLANK(   OtherPhone )) , 
NOT(REGEX(  OtherPhone , &quot;\\D*?(\\d\\D*?){10,12}&quot;)),
$Profile.Name != &quot;Integration&quot;
)</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>Other Must be between 10 to 12 digits only</errorMessage>
    </validationRules>
</CustomObject>