Sutter Health/src/objects/Contact.object
<CustomObject>
    <validationRules>
        <fullName>Ten_Digit_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.Name = &quot;SHP Sales Broker Contact&quot;,
RecordType.Name = &quot;SHP Sales Broker Contact Read Only&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact&quot;,
RecordType.Name = &quot;SHP Sales Employer Contact Read Only&quot;,
RecordType.Name = &quot;SHMMN Broker&quot;,
RecordType.Name = &quot;SHMMN Employer&quot;), 
NOT(ISBLANK(    Phone )) , 
NOT(REGEX(   Phone , &quot;\\D*?(\\d\\D*?){10,12}&quot;)),
$Profile.Name != &quot;Integration&quot;
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone  Must be between 10 to 12 digits only</errorMessage>
    </validationRules>
</CustomObject>